Convert Exceptions to Error via Exceptions.tryFunction